log
Thu Apr 30 06:07:16 PM UTC 2026: 
 treemap.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 53 insertions(+), 9 deletions(-)
 tests:  1|8
total_score: 0/60
836fe99
Thu Apr 30 06:07:34 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   52 |     return;
      |     ^~~~~~
treemap.c:45:11: note: declared here
   45 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
11f4bd7
Thu Apr 30 06:07:46 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
19c9b46
